# DevCleaner

./: .env  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  LICENSE  README.md  commitlint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
.codebuddy/: settings.json
.codebuddy/rules/: rules.mdc
.github/workflows/: ci.yml  commitlint.yml  frontend.yml  release.yml  rust.yml  tauri.yml
backend/: go.mod  providers.json
backend/cleaner/: cleaner.go
backend/cmd/: server.go  server_test.go
backend/config/: config.go
backend/logger/: logger.go
backend/provider/: android_sdk.go  cargo.go  carthage.go  cocoapods.go  composer.go  flutter.go  go_lang.go  gradle.go  homebrew.go  jetbrains.go  maven.go  nuget.go  pnpm.go  provider.go  provider_crossplatform_test.go  provider_linux_test.go  provider_macos_test.go  provider_scan_test.go  provider_test.go  provider_windows_test.go  python.go  ruby.go  unity.go  vscode.go  xcode.go
backend/scanner/: scanner.go  scanner_test.go
backend/tools/: tools.go
docs/: BUG_FIXES_SUMMARY.md  FINAL_REPORT.md  FIX_GUIDE.md  TAURI_DEV_FIX.md  TESTING_REPORT.md  phase2-plan.md
scripts/: build.sh  package.sh  verify-rust.sh
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: .env.example  Cargo.toml  providers.json  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src-tauri/src/commands/: analysis.rs  disk.rs  mod.rs  projects.rs  scan.rs  settings.rs  stats.rs  types.rs
(+37 files in other folders)
